--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ button{
 	color: white;
 }
 .resume:hover{
-	background-color: white;
+	background-color: transparent;
 	color: black;
 }
 .project{
