--- a/style.css
+++ b/style.css
@@ -236,6 +236,10 @@ footer{
 	max-width: 100%;
 	justify-content: space-between;
 }
+#cv{
+	width: 150px;
+	padding: 6px 15px;
+}
 .infoCard{
 	max-width: 100%;
 	max-height: 30%;
