--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ button{
 .para{
 	max-width: 25vw;
 }
-footer{
+.footer{
 	display: flex;
 	position: relative;
 	background-color: white;
@@ -242,15 +242,15 @@ footer{
 	margin-top: 15vh;
 	display: flex;
 	width: 100%;
-	height: 110vh;
+	min-height: 110vh;
 	position: relative;
 	align-items: center;
 }
 .res{
 	background-color: rgb(230, 218, 206);
-	margin-top: -15vh;
+	margin-top: -30vh;
 	width: 100%;
-	height: 110vh;
+	min-height: 110vh;
 	align-items: center;
 	position: relative;
 	text-align: center;
@@ -276,6 +276,7 @@ footer{
 }
 .infoCard{
 	max-width: 100%;
+	margin: auto;
 	max-height: 30%;
 	display: flex;
 	background-color: white;
@@ -302,6 +303,53 @@ footer{
 	color: blue;
 }
 .infoCard p{
-	font-size: 13px;
+	font-size: 17px;
 	/* font-weight: 600; */
+}
+form{
+	width: 40vw;
+	margin: auto;
+}
+.nameContainer{
+	display: flex;
+	justify-content: space-between;
+}
+.nameLabel{
+	margin: 25px;
+	text-align: left;
+}
+input, textarea{
+	width: 100%;
+	border: none;
+	border-bottom: 2px solid black;
+	outline: none;
+	color: blue;
+	font-size: 17px;
+	padding: 10px;
+	padding-left: 15px;
+	resize: none;
+}
+input:hover, textarea:hover{
+	border-bottom: 3px solid blue;
+}
+.skillContainer{
+	padding: 40px;
+	padding-top: 70px;
+	text-align: left;
+	width: 100%;
+}
+.skills{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+.skills .titleContainer{
+	width: 50%;
+	justify-content: left;
+	margin: 8px 0;
+}
+.skills .square{
+	width: 10px;
+	height: 10px;
+	margin: auto 16px 5px 0;
 }
