--- a/style.css
+++ b/style.css
@@ -353,3 +353,21 @@ input:hover, textarea:hover{
 	height: 10px;
 	margin: auto 16px 5px 0;
 }
+.proImg{
+	width: 100%;
+}
+.proImg h3{
+	text-align: left;
+	padding-left: 25px;
+	margin-top: 70px;
+	border-left: 15px solid blue;
+}
+.proImg img{
+	margin: 20px;
+	width: 40vw;
+	border: 1px solid blue;
+	padding: 5px;
+}
+.proImg img:hover{
+	box-shadow: 0 0 17px 16px rgba(34, 34, 179, 0.305);
+}
