--- a/style.css
+++ b/style.css
@@ -335,7 +335,7 @@ input:hover, textarea:hover{
 	padding: 40px;
 	padding-top: 70px;
 	text-align: left;
-	width: 100%;
+	width: 76%;
 }
 .skills{
 	display: flex;
@@ -471,6 +471,39 @@ input:hover, textarea:hover{
 	}
 	.contacts div{
 		margin: 15px 0;
+	}
+	.res{
+		margin-top: 0;
+	}
+	.res h1{
+		font-size: 50px;
+	}
+	.res .experience .cv{
+		margin: 50px 0;
+	}
+	.res .experience{
+		max-width: 90%;
+	}
+	.infoCard{
+		display: block;
+	}
+	.infoCard .rightInfo{
+		margin-top: 0;
+		padding-top: 0;
+		max-width: 100%;
+	}
+	form{
+		width: 90%;
+		padding: 10px;
+	}
+	.nameContainer{
+		display: block;
+	}
+	.skills .titleContainer{
+		width: 100%;
+	}
+	.skillContainer h2{
+		font-size: 29px;
 	}
 	
 }
